@@ -17,5 +17,6 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 EXTRA_DIST = \
+	.cvsignore \
 	cvs.linux \
 	cvs.solaris
