@@ -20,40 +20,41 @@
 # GNU General Public License for more details.
 
 EXTRA_DIST = \
-    ChangeLog \
-    Makefile.in \
-    build_vms.com \
-    config.h \
-    dir.h \
-    filesubr.c \
-    filutils.c \
-    filutils.h \
-    getpass.c \
-    getwd.c \
-    misc.c \
-    misc.h \
-    ndir.c \
-    ndir.h \
-    pathnames.h \
-    pc.c \
-    pipe.c \
-    pipe.h \
-    piped_child.c \
-    pwd.c \
-    pwd.h \
-    rcmd.c \
-    readlink.c \
-    rmdir.c \
-    startserver.c \
-    stat.c \
-    unlink.c \
-    utime.c \
-    vms-types.h \
-    vms.h \
-    vmsmunch.c \
-    vmsmunch.h \
-    vmsmunch_private.h \
-    waitpid.c
+	.cvsignore \
+	ChangeLog \
+	Makefile.in \
+	build_vms.com \
+	config.h \
+	dir.h \
+	filesubr.c \
+	filutils.c \
+	filutils.h \
+	getpass.c \
+	getwd.c \
+	misc.c \
+	misc.h \
+	ndir.c \
+	ndir.h \
+	pathnames.h \
+	pc.c \
+	pipe.c \
+	pipe.h \
+	piped_child.c \
+	pwd.c \
+	pwd.h \
+	rcmd.c \
+	readlink.c \
+	rmdir.c \
+	startserver.c \
+	stat.c \
+	unlink.c \
+	utime.c \
+	vms-types.h \
+	vms.h \
+	vmsmunch.c \
+	vmsmunch.h \
+	vmsmunch_private.h \
+	waitpid.c
 
 # for backwards compatibility with the old makefiles
 realclean: maintainer-clean
